improve CUE format

--- a/charts/vela-core/templates/backend.yaml
+++ b/charts/vela-core/templates/backend.yaml
@@ -13,25 +13,26 @@ spec:
       kind: Deployment
   extension:
     template: |
-      #Template: {
-      	apiVersion: "standard.oam.dev/v1alpha1"
-      	kind:       "Containerized"
-      	metadata:
-      		name: backend.name
-      	spec: {
-      		replicas: 1
-      		podSpec: {
-      			containers: [{
-      				image: backend.image
-      				name:  backend.name
-      			}]
-      		}
-      	}
+      data: {
+        apiVersion: "standard.oam.dev/v1alpha1"
+        kind:       "Containerized"
+        metadata:
+          name: parameter.name
+        spec: {
+          replicas: 1
+            podSpec: {
+              containers: [{
+                 image: parameter.image
+                   name:  parameter.name
+               }]
+            }
+        }
       }
-      backend: {
-      	name: string
-      	// +usage=specify app image
-      	// +short=i
-      	image: string
+      #backend: {
+        name: string
+          // +usage=specify app image
+          // +short=i
+        image: string
       }
+      parameter: #backend
 
