--- a/charts/vela-core/templates/containerized.yaml
+++ b/charts/vela-core/templates/containerized.yaml
@@ -15,19 +15,19 @@ spec:
       kind: Service
   extension:
     template: |
-      #Template: {
+      data: {
       	apiVersion: "standard.oam.dev/v1alpha1"
       	kind:       "Containerized"
       	metadata:
-      		name: webservice.name
+      		name: parameter.name
       	spec: {
       		replicas: 1
       		podSpec: {
       			containers: [{
-      				image: webservice.image
-      				name:  webservice.name
+      				image: parameter.image
+      				name:  parameter.name
       				ports: [{
-      					containerPort: webservice.port
+      					containerPort: parameter.port
       					protocol:      "TCP"
       					name:          "default"
       				}]
@@ -35,7 +35,7 @@ spec:
       		}
       	}
       }
-      webservice: {
+      #webservice: {
       	name: string
       	// +usage=specify app image
       	// +short=i
@@ -44,3 +44,5 @@ spec:
       	// +short=p
       	port: *6379 | int
       }
+      parameter: #webservice
+
