--- a/charts/vela-core/templates/tasks.yaml
+++ b/charts/vela-core/templates/tasks.yaml
@@ -13,35 +13,36 @@ spec:
     - monitor
     - logging
     template: |
-      #Template: {
-      	apiVersion: "v1"
-      	kind:       "Job"
-      	metadata: name: task.name
-      	spec: {
-      		parallelism: task.count
-      		completions: task.count
-      		template:
-      			spec:
-      				containers: [{
-      					image: task.image
-      					name:  task.name
-      					ports: [{
-      						containerPort: task.port
-      						protocol:      "TCP"
-      						name:          "default"
-      					}]
-      				}]
-      	}
+      data: {
+        apiVersion: "v1"
+        kind:       "Job"
+        metadata: name: parameter.name
+        spec: {
+          parallelism: parameter.count
+            completions: parameter.count
+            template:
+              spec:
+                containers: [{
+                   image: parameter.image
+                     name:  parameter.name
+                     ports: [{
+                       containerPort: parameter.port
+                         protocol:      "TCP"
+                         name:          "default"
+                     }]
+                 }]
+        }
       }
-      task: {
-      	// +usage=specify number of tasks to run in parallel
-      	// +short=c
-      	count: *1 | int
-      	name:  string
-      	// +usage=specify app image
-      	// +short=i
-      	image: string
-      	// +usage=specify port for container
-      	// +short=p
-      	port: *6379 | int
+      #task: {
+        // +usage=specify number of tasks to run in parallel
+        // +short=c
+        count: *1 | int
+        name:  string
+          // +usage=specify app image
+          // +short=i
+        image: string
+          // +usage=specify port for container
+          // +short=p
+        port: *6379 | int
       }
+      parameter: #task
