--- a/charts/vela-core/templates/webservices.yaml
+++ b/charts/vela-core/templates/webservices.yaml
@@ -15,32 +15,33 @@ spec:
       kind: Service
   extension:
     template: |
-      #Template: {
-      	apiVersion: "standard.oam.dev/v1alpha1"
-      	kind:       "Containerized"
-      	metadata:
-      		name: webservice.name
-      	spec: {
-      		replicas: 1
-      		podSpec: {
-      			containers: [{
-      				image: webservice.image
-      				name:  webservice.name
-      				ports: [{
-      					containerPort: webservice.port
-      					protocol:      "TCP"
-      					name:          "default"
-      				}]
-      			}]
-      		}
-      	}
+      data: {
+        apiVersion: "standard.oam.dev/v1alpha1"
+        kind:       "Containerized"
+        metadata:
+          name: parameter.name
+        spec: {
+          replicas: 1
+            podSpec: {
+              containers: [{
+                 image: parameter.image
+                 name:  parameter.name
+                 ports: [{
+                   containerPort: parameter.port
+                     protocol:      "TCP"
+                     name:          "default"
+                 }]
+               }]
+            }
+        }
       }
-      webservice: {
-      	name: string
-      	// +usage=specify app image
-      	// +short=i
-      	image: string
-      	// +usage=specify port for container
-      	// +short=p
-      	port: *6379 | int
+      #webservice: {
+        name: string
+          // +usage=specify app image
+          // +short=i
+        image: string
+          // +usage=specify port for container
+          // +short=p
+        port: *6379 | int
       }
+      parameter: #webservice
