--- a/charts/vela-core/templates/routetrait.yaml
+++ b/charts/vela-core/templates/routetrait.yaml
@@ -15,23 +15,25 @@ spec:
     name: routes.standard.oam.dev
   extension:
     template: |
-      #Template: {
-      	apiVersion: "standard.oam.dev/v1alpha1"
-      	kind:       "Route"
-      	spec: {
-      		host: route.domain
-      		path: route.path
-      		tls: {
-      			issuerName: route.issuer
-      		}
-      		backend: {
-      			port: route.port
-      		}
-      	}
+      data: {
+        apiVersion: "standard.oam.dev/v1alpha1"
+        kind:       "Route"
+        spec: {
+          host: parameter.domain
+            path: parameter.path
+            tls: {
+              issuerName: parameter.issuer
+            }
+            backend: {
+              port: parameter.port
+            }
+        }
       }
-      route: {
-      	domain: *"" | string
-      	path:   *"" | string
-      	port:   *443 | int
-      	issuer: *"" | string
+      #route: {
+        domain: *"" | string
+        path:   *"" | string
+        port:   *443 | int
+        issuer: *"" | string
       }
+      parameter: #route
+
