--- a/pkg/plugins/testdata/manualscalars.yaml
+++ b/pkg/plugins/testdata/manualscalars.yaml
@@ -1,25 +1,29 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
-  name: manualscalertraits.core.oam.dev
   annotations:
-    definition.oam.dev/apiVersion: "core.oam.dev/v1alpha2"
-    definition.oam.dev/kind: "ManualScalerTrait"
+    definition.oam.dev/apiVersion: core.oam.dev/v1alpha2
+    definition.oam.dev/kind: ManualScalerTrait
+  name: manualscalertraits.core.oam.dev
+  namespace: default
 spec:
   appliesToWorkloads:
     - core.oam.dev/v1alpha2.ContainerizedWorkload
+    - apps/v1.Deployment
   definitionRef:
     name: manualscalertraits.core.oam.dev
+  workloadRefPath: spec.workloadRef
   extension:
-    template: |
-      #Template: {
+    template: |-
+      data: {
       	apiVersion: "core.oam.dev/v1alpha2"
       	kind:       "ManualScalerTrait"
       	spec: {
-      		replicaCount: scale.replica
+      		replicaCount: parameter.replica
       	}
       }
-      scale: {
+      #scale: {
       	//+short=r
       	replica: *2 | int
       }
+      parameter: #scale
