attemp to parse cue parameter

--- a/documentation/samples/velaConfig.yaml
+++ b/documentation/samples/velaConfig.yaml
@@ -12,10 +12,11 @@ data:
       "namespace": "cert-manager",
       "version": "1.0.0"
     }
-  ingresses.networking.k8s.io: |
+  servicemonitors.monitoring.coreos.com: |
     {
-      "repo": "stable",
-      "urL": "https://kubernetes-charts.storage.googleapis.com/",
-      "name": "nginx-ingress",
-      "version": "1.41.2"
+      "repo": "prometheus-community",
+      "urL": "https://prometheus-community.github.io/helm-charts",
+      "name": "kube-prometheus-stack",
+      "namespace": "monitoring",
+      "version": "9.4.4"
     }
