--- a/charts/vela-core/Chart.yaml
+++ b/charts/vela-core/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: vela-core
-description: A Helm chart for Kubernetes
+description: A Helm chart for Kube Vela core
 
 # A chart can be either an 'application' or a 'library' chart.
 #
