--- a/charts/vela-core/templates/metricstraits.yaml
+++ b/charts/vela-core/templates/metricstraits.yaml
@@ -1,3 +1,12 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  labels:
+    mornitoring: oam
+  name: monitoring
+
+---
 apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
