--- a/documentation/samples/metrics-demo/metrics-component.yaml
+++ b/documentation/samples/metrics-demo/metrics-component.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   workload:
     apiVersion: standard.oam.dev/v1alpha1
-    kind: Containerized
+    kind: PodSpecWorkload
     metadata:
       name: metrics-app
       labels:
