--- a/documentation/samples/metrics-demo/prometheus/prometheus-oam.yaml
+++ b/documentation/samples/metrics-demo/prometheus/prometheus-oam.yaml
@@ -19,7 +19,7 @@ spec:
     fsGroup: 2000
     runAsNonRoot: true
     runAsUser: 1000
-  serviceAccountName: prometheus-operator
+  serviceAccountName: kube-prometheus-stack-prometheus
   serviceMonitorNamespaceSelector:
     matchLabels:
       mornitoring: oam
