Support deployment via appfile
Signed-off-by: Hongchao Deng <hongchaodeng1@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,10 @@ cmd/vela/fake/source.go
 cmd/vela/fake/chart_source.go
 charts/vela-core/crds/_.yaml
 
+testapp/.vela/
+
 # Dashboard
-dashboard/node_modules/
+node_modules/
 .eslintcache
 dashboard/dist/
 dashboard/package-lock.json
