--- a/charts/vela-core/templates/backend.yaml
+++ b/charts/vela-core/templates/backend.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     definition.oam.dev/apiVersion: "standard.oam.dev/v1alpha1"
     definition.oam.dev/kind: "PodSpecWorkload"
+    definition.oam.dev/description: "Backend worker without ports exposed"
 spec:
   definitionRef:
     name: podspecworkload.standard.oam.dev
