--- a/charts/vela-core/crds/core.oam.dev_workloaddefinitions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_workloaddefinitions.yaml
@@ -85,6 +85,16 @@ spec:
                   builders
                 type: object
                 x-kubernetes-preserve-unknown-fields: true
+              podSpecPath:
+                description: PodSpecPath indicates where/if this workload has K8s
+                  podSpec field if one workload has podSpec, trait can do lot's of
+                  assumption such as port, env, volume fields.
+                type: string
+              revisionLabel:
+                description: RevisionLabel indicates which label for underlying resources(e.g.
+                  pods) of this workload can be used by trait to create resource selectors(e.g.
+                  label selector for pods).
+                type: string
             required:
             - definitionRef
             type: object
