--- a/charts/vela-core/crds/core.oam.dev_components.yaml
+++ b/charts/vela-core/crds/core.oam.dev_components.yaml
@@ -72,6 +72,7 @@ spec:
                         will specify parameter values using this name.
                       type: string
                     required:
+                      default: false
                       description: Required specifies whether or not a value for this
                         parameter must be supplied when authoring an ApplicationConfiguration.
                       type: boolean
@@ -82,7 +83,9 @@ spec:
                 type: array
               workload:
                 description: A Workload that will be created for each ApplicationConfiguration
-                  that includes this Component. Workloads must be defined by a WorkloadDefinition.
+                  that includes this Component. Workload is an instance of a workloadDefinition.
+                  We either use the GVK info or a special "type" field in the workload
+                  to associate the content of the workload with its workloadDefinition
                 type: object
                 x-kubernetes-embedded-resource: true
                 x-kubernetes-preserve-unknown-fields: true
@@ -137,6 +140,10 @@ spec:
                 - name
                 - revision
                 type: object
+              observedGeneration:
+                description: The generation observed by the component controller.
+                format: int64
+                type: integer
             type: object
         type: object
     served: true
