--- a/samples/autoscalers/cron/PodSpecWorkload/sample_component.yaml
+++ b/samples/autoscalers/cron/PodSpecWorkload/sample_component.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   workload:
     apiVersion: standard.oam.dev/v1alpha1
-    kind: Containerized
+    kind: PodSpecWorkload
     spec:
       replicas: 1
       podSpec:
