Update appliesToWorkloads field in traitdefintion
updated appliesToWorkloads fileds in traitdefinition
for three workloads, webservice, task and backend.
fix issue #346

--- a/charts/vela-core/templates/metricstraits.yaml
+++ b/charts/vela-core/templates/metricstraits.yaml
@@ -17,6 +17,9 @@ metadata:
     definition.oam.dev/kind: MetricsTrait
 spec:
   appliesToWorkloads:
+    - webservice
+    - backend
+    - task
     - containerizedworkloads.core.oam.dev
     - clonesetworkloads.apps.kruise.io
     - deployments.apps
