--- a/charts/vela-core/templates/manualscalars.yaml
+++ b/charts/vela-core/templates/manualscalars.yaml
@@ -10,6 +10,7 @@ spec:
   appliesToWorkloads:
     - core.oam.dev/v1alpha2.ContainerizedWorkload
     - apps/v1.Deployment
+    - webservice
   definitionRef:
     name: manualscalertraits.core.oam.dev
   workloadRefPath: spec.workloadRef
