cue: rename 'data' to 'output'

--- a/charts/vela-core/templates/podspecworkload.yaml
+++ b/charts/vela-core/templates/podspecworkload.yaml
@@ -15,7 +15,7 @@ spec:
       kind: Service
   extension:
     template: |
-      data: {
+      output: {
       	apiVersion: "standard.oam.dev/v1alpha1"
       	kind:       "PodSpecWorkload"
       	metadata:
