--- a/charts/vela-core/templates/webservices.yaml
+++ b/charts/vela-core/templates/webservices.yaml
@@ -16,7 +16,7 @@ spec:
       kind: Service
   extension:
     template: |
-      data: {
+      output: {
         apiVersion: "standard.oam.dev/v1alpha1"
         kind:       "PodSpecWorkload"
         metadata:
