--- a/charts/vela-core/templates/backend.yaml
+++ b/charts/vela-core/templates/backend.yaml
@@ -14,7 +14,7 @@ spec:
       kind: Deployment
   extension:
     template: |
-      data: {
+      output: {
         apiVersion: "standard.oam.dev/v1alpha1"
         kind:       "PodSpecWorkload"
         metadata:
