--- a/charts/vela-core/templates/manualscalars.yaml
+++ b/charts/vela-core/templates/manualscalars.yaml
@@ -17,7 +17,7 @@ spec:
   workloadRefPath: spec.workloadRef
   extension:
     template: |-
-      data: {
+      output: {
       	apiVersion: "core.oam.dev/v1alpha2"
       	kind:       "ManualScalerTrait"
       	spec: {
